--- a/TS/Vue/项目配置.md
+++ b/TS/Vue/项目配置.md
@@ -141,7 +141,7 @@ tsconfig.config.json
 
 ```json
 //被合并到tsconfig.json
-//修改时推荐修改这个文件
+//打包修改时推荐修改这个文件
 {
   // node SSR
   "extends": "@vue/tsconfig/tsconfig.node.json",
@@ -162,10 +162,11 @@ tsconfig.config.json
 tsconfig.json
 
 ```json
+// 开发修改时推荐修改这个文件
 {
-  // 真正的配置
   "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  	// element-plus添加编译文件auto-imports.d.ts, components.d.ts
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "auto-imports.d.ts", "components.d.ts"],
   "compilerOptions": {
     "baseURL": ".",
    //vscode代码提示的路径
@@ -185,7 +186,46 @@ tsconfig.json
 vite.config.ts
 
 ```js
+import { fileURLToPath, URL } from 'node:url'
+
+import { defineConfig } from 'vite'
+import vue from '@vitejs/plugin-vue'
+
+// element-plus集成  自动导入
+import AutoImport from 'unplugin-auto-import/vite'
+import Components from 'unplugin-vue-components/vite'
+import { ElementPlusResolver } from 'unplugin-vue-components/resolvers'
+// 针对ELMessage和ELLoading等组件引入样式
+import {
+  createStyleImportPlugin,
+  ElementPlusResolve
+} from 'vite-plugin-style-import'
+
+
 export default defineConfig({
+  plugins: [
+    vue(),
+    // 集成element-plus  自动导入
+    AutoImport({
+      resolvers: [ElementPlusResolver()]
+    }),
+    Components({
+      resolvers: [ElementPlusResolver()]
+    }),
+    // 针对ELMessage和ELLoading等组件引入样式
+    createStyleImportPlugin({
+      resolves: [ElementPlusResolve()],
+      libs: [
+        {
+          libraryName: 'element-plus',
+          esModule: true,
+          resolveStyle: (name: string) => {
+            return `element-plus/theme-chalk/${name}.css`
+          }
+        }
+      ]
+    })
+  ],
   resolve: {
     //打包时转换的路径	
     alias: {
@@ -197,41 +237,46 @@ export default defineConfig({
 
 
 
-pnpm i less -D
+npm i less -D
 
-pnpm i normalize.css(在main中引入)
+npm i normalize.css(在main中引入)
 
-pnpm i vue-router
+npm i element-plus 
 
-pnpm i pinia
+npm i unplugin-vue-components unplugin-auto-import -D (自动导入element-plus组件)
 
-pnpm i axios
+npm i vite-plugin-style-import   consola  -D (ElMessage等样式)
+
+npm i @element-plus/icons-vue (注册icon图标，需要创建一个文件进行全局注册)
+
+```ts
+// global/register-icons.ts
+import * as ElementPlusIconsVue from '@element-plus/icons-vue'
+import type { App } from 'vue'
+
+function registerIcons(app: App<Element>) {
+  for (const [key, component] of Object.entries(ElementPlusIconsVue)) {
+  	app.component(key, component)
+	}
+}
+export default registerIcons
+```
 
 ##### 区分生产和开发环境
 
-###### 方式一
+方式一
 
 Vite在一个特殊的import.meta.env对象上暴露环境变量。vite在开发(dev)阶段不需要经过node打包
 
-* 
+* import.meta.env.MODE: {string} 应用运行的模式
+* import.meta.env.PROD: {boolean} 应用是否运行在生产环境
+* import.meta.env.DEV: {boolean} 应用是否运行在开发环境 (永远与 import.meta.env.PROD相反)。 
+* import.meta.env.SSR: {boolean} 应用是否运行在 server 上
 
-###### 方式二
+方式二
 
+Vite 使用 dotenv 从你的 环境目录 中的下列文件加载额外的环境变量，只有以 VITE_ 为前缀的变量才会暴露给经过 vite 处理的代码
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+* .env
+* .env.development
+* .env.production
