--- a/课程/多媒体技术.md
+++ b/课程/多媒体技术.md
@@ -2,6 +2,26 @@
 
 40简答 20论述 20计算 20客观
 
+数据的采集与存储
+
+* 多媒体技术概论
+* 多媒体硬件环境
+
+数据的处理与压缩
+
+* 数字声音与语音编码
+* 数据压缩理论
+* 计算机图像、视频编码方法
+
+数据的传输
+
+* 多媒体通信与网络
+* 超文本和web系统
+
+综合应用实例
+
+* 智能视频监控、基于内容的检索、多模态数据分析
+
 ### 一
 
 文件格式
@@ -153,11 +173,11 @@ A/D转换器的输出为12位二进制数，最大输入模拟信号为10V，则
 
 ### 四
 
-非均匀量化，什么方法，解决什么问题。  改变量化阶，APCM，DPCM（样本间的差编码）
+非均匀量化，什么方法，解决什么问题。  APCM(改变量化阶)，DPCM（样本间的差编码）
 
 
 
-声音质量的评价：带宽、信噪比、主管质量度量
+声音质量的评价：带宽、信噪比、主观质量度量
 
 增量调制(DM)：斜率过载、粒状噪声
 
@@ -176,15 +196,22 @@ A/D转换器的输出为12位二进制数，最大输入模拟信号为10V，则
 
 * 思想：根据**过去的样本去估算下一个样本**信号的幅度大小(预测值)，然后对**实际信号值和预测值之差进行量化编码**，从而减少每个样本信号的位数
 * <img src="img/image-20221110174707227.png" alt="image-20221110174707227" />
-* DPCM和PCM的不同：PCM之间对采样信号进行量化编码，而DPCM是对实际信号值与预测值之差进行量化编码，存储或传送的是差值而不是幅度绝对值
+* DPCM和PCM的不同：PCM直接对采样信号进行量化编码，而DPCM是对实际信号值与预测值之差进行量化编码，存储或传送的是差值而不是幅度绝对值
+
+DPCM应用场景--块之间的直流成分
 
 
 
+ADPCM
+
+* 利用自适应思想**改变量化阶**大小
+* 使用过去的样本值**估算**下一个输入样本的预测值
 
 
-DPCM应用场景 块之间的直流成分
 
+子带编码(SBC)
 
+基本思想：频带分成若干连续子带，每个子带用**单独的编码方式**，在接收端将每个子带单独译码然后**组合**还原
 
 线性预测编码(LPC)
 
@@ -212,6 +239,7 @@ DPCM应用场景 块之间的直流成分
 * YUV：电视信号。YCbCr适用于数字电视
   * 为兼容黑白和彩色电视信号，亮度Y和色度U、V分离
   * <img src="img/image-20221108084439140.png" alt="image-20221108084439140" style="zoom:45%;" />
+  * <img src="img/image-20221114103809920.png" alt="image-20221114103809920" style="zoom:45%;" />
 * CMY：彩色印刷
   * Cyan(青色) Magenta(品红) Yellow(黄)
     * CMYK:增加了黑色(blacK)
@@ -248,10 +276,10 @@ JPEG算法步骤
 * 压缩前准备：颜色空间转换成YCbCr(实现亮度和颜色的分离，人感受亮度和颜色的敏感度不一样，分别使用不同的方法处理)
 * 正向离散余弦变换(FDCT,Forward Discrete Cosine Transform)
   * 把每个单独的**图像分量**分成8X8的图像块，块作为离散余弦变换的输入。**通过DCT，把能量集中在少数几个系数上**(空间域->频率域)
-* 量化（颜色可以粗糙一点、亮度更精细）
+* 量化（颜色可以粗糙一点、亮度更精细）这是损失最主要的环节
   * 处理**频率系数**。目的是**减小非0系数的幅度以及增加0值系数的数目**
   * 按照系数所在的**位置**和每种**分量的值**进行**矩阵点除**
-  * 失帧主因：量化是多到一的过程
+  * **失帧主因：量化是多到一的过程**
 * Z字形扫描
   * 8*8的矩阵 --> 1\*64的矢量。频率低的系数放在矢量的顶部
   * 增加连续的0系数的个数
@@ -339,7 +367,7 @@ JPEG标准的可选操作
 
 **运动补偿技术原理**(减少时域冗余)
 
-* 通过参考帧的局部图像来预测、补偿当前的局部图像，是减少帧序列冗余(时域)最有效方法。(采用16*16宏块的运动补偿)
+* 通过参考帧的局部图像来**预测、补偿**当前的局部图像，是减少帧序列冗余(时域)最有效方法。(采用16*16宏块的运动补偿)
 * 算法：宏块为预测单元，**当前宏块是参考宏块的移位**。每个宏块计算出一个二维**运动矢量**(运动方向和幅度)，利用它和先前的图像可预测当前图像。**预测误差16\*16**，要编码、传送，供解码段恢复图像
 * P帧一个参考、B帧两个参考
 
@@ -465,18 +493,33 @@ DS优点：
 
 理解三个概念，解决什么问题
 
-* 多模态：模态是指事物发生或存在的方式，多模态是指两个或两个以上模态的各种形式的组合。不同模态是从**不同角度**描述同一事物，更全面观察和分析事物
+* 多模态：模态是指事物发生或存在的方式，多模态是指两个或两个以上模态的各种形式的组合。不同模态是从**不同角度**描述同一事物，更全面观察和分析事物。(建立模型，实现模态间信息的融合、交流、转换)
   * 各模块信息互补，预测更准
+  
+  
+  
 * 检索:根据用户需求，从信息集合中(数据库、网络...)检索出与用户需求相关的信息子集。
   * 基于文本的检索(Text-Based Retrieval)
     * 传统都是对文本的检索---标注媒体内容或属性--关键字相似度
     * 原理简单、技术成熟。无法表达多媒体的**丰富内容；效率**低下；**人工**标注费时费力
   * 基于内容的检索(Content-Based Retrieval)
-    * 原理：为每幅图提取特征并进行量化，表示成向量空间；将用户的查询转化成向量；并与已有的向量空间进行相似度匹配计算
+    * 原理：为每幅图提取特征并进行量化，表示成向量空间；将用户的查询转化成向量；并与已有的向量空间进行**相似度匹配**计算
+    * 基于内容的图像检索：图像特征从各个方面描述了图像的内在**语义**，根据特征的**相似度**实现对图像的检索
+      * 过程：特征提取(颜色、纹理、形状、空间关系---**CBIR基础**)--特征分析--特征匹配
+      * **颜色是描述一幅图像最简单有效的特征**，颜色直方图是一个K维特征向量不关心颜色所处空间位置，描述的是不同颜色**所占比例**。颜色矩、颜色相关图(不同颜色对之间的空间相关性)
+      * 纹理特征---颜色或灰度按一定规律变化或分布形成的图案，具有一定重复性、均匀性、方向性
+      * 形状特征---先对图像进行分割
+    * 基于内容的视频检索：在大量视频数据中找到**视频片段**
+      * **帧**是一幅图像，组成视频的最小单位；**镜头**由一系列连续帧组成；**场景**由一些语义相关的镜头组成；**片段**由一系列相关的场景组成，表达一个完整事件
+      * 过程：**镜头检测**(分开不同的镜头)----**提取关键帧**(去除大量冗余)----使用基于内容的图像检索技术
+    * 基于内容的音频检索：利用语音识别与处理技术检索音频信息
+      * 逐词逐句地转换为文字----对语义做出正确的理解与回应
+
+
+
 * 基于内容的视频监控
   * 强调对于内容的理解
-
-
+  * 概念：由机器自动分析视频图像源，从中识别并提取有用的关键信息，并自动控制机器进行相应动作
 
 
 
