--- a/课程/信息安全.md
+++ b/课程/信息安全.md
@@ -437,62 +437,253 @@ CC标准是目前最全面的信息技术安全评估标准
 
 ==了解防止网络攻击的控制措施==
 
-- 数据加密
-- 虚拟专有网VPN
+- 1数据加密:将数据放入物理链路之前加密.**端到端加密**
+- 2虚拟专有网VPN
+  - 1和2基于密码学构建保密的网络环境---VPN还需认证机制
+
+- 3PKI和证书
+- 4身份鉴别
+  - 3和4基于密码学构建可认证的网络环境---无线保密认证机制
+
+- 5访问控制---类似操作系统中的访问控制-防火墙、入侵检测
 
 
 
 ==掌握防火墙体系结构、类型、能力和限制,掌握防火墙基本工作原理(重点)==
 
+防火墙:**位于**两个信任程度不同的网络之间的软件或硬件设备的**组合**,对两网络之间的通信**进行控制**,通过强制实施统一的安全策略,防止对重要信息资源的非法存取和访问,以达到保护系统安全的目的
+
+设计要求:1⃣️内外所有网络数据流必须经过防火墙、2⃣️只有符合安全策略的数据流才能通过防火墙、3⃣️本身应渗透免疫、4⃣️强认证机制、5⃣️人机界面良好、配置简单、
+
+通过以下四个手段执行安全策略和实现网络访问控制:
+
+- 用户控制:控制访问服务的人员
+- 行为控制:控制服务使用方式
+- 服务控制:确定访问的网络服务类型
+- 方向控制:确定允许通过的特定请求
+
+防火墙局限性:
+
+- 限制有用的网络服务
+- 无法防范内部攻击(由入侵检测解决)
+- 无法防范数据驱动型(如缓冲区攻击)攻击
+- 无法防范新的网络安全问题(被动的网络防护手段,无法防范APT)
+
+
+
+防火墙体系结构:防火墙既可以是**单个的**主机系统,又可以是**多个设备**组成的一个安全防护系统
+
+- 周边网络/非军事区DMZ
+
+- 外部路由:入站数据包路由到堡垒主机
+
+  内部路由:保护内部网络不受外部网络和周边网络的侵害,执行大部分过滤工作
+
+- 周边网络:位于内部路由器和外部路由器之间
+
+  堡垒主机:位于周边网络上,其上还可放置牺牲主机
+
+
+
+
+
+防火墙类型:
+
+- 包过滤防火墙:静态包过滤防火墙是**最原始的防火墙**,发生在**网络层**上     ==作业==
+  - 缺陷:规则难于配置、无法处理内部数据细节、无状态的、易造成数据驱动型攻击(向某个程序发送攻击,产生非预期结果)
+- 状态检测防火墙:较传统防火墙,**增加了**从一个包到另一个包过渡时,”状态“或”上下文“的概念
+  - 1⃣️采用基于连接的状态检测机制和状态检测包过滤技术、2⃣️将属于同一链接的所有包作为一个整体数据流看待、3⃣️根据会话信息决定数据包是否通过,不能处理实际应用层数据
+- 应用层代理防火墙:所有通信都必须经应用层代理转发.须针对每个服务运行一个代理
+- 网络地址转换技术NAT:保护和隐藏内部网络的IP地址,解决IP地址不足的问题
+- 个人防火墙:运行在需要保护的计算机上,隔离不希望的、来自网络的通信量
+  - 通常与病毒扫描器结合,高效
+- <img src="img/image-20221115200105729.png" alt="image-20221115200105729" style="zoom:45%;" />
+
+
+
 
 
 ==了解入侵监测系统的功能和类型==
 
+入侵检测系统IDS功能:**监视**用户和系统活动、**审计**系统配置中存在的弱点和错误配置、**评估**关键系统和数据文件的完整性、**识别**系统活动中存在的已知攻击模式
 
+IDS分为四个基本组件:事件产生器、事件分析器、响应单元、事件数据库
+
+入侵检测系统被分为:基于主机的IDS、基于网络的IDS
+
+入侵检测的基本方法:异常检测、误用检测
 
 ==掌握VPN的类型和协议(重点)==
 
+VPN:将物理上分布在不同地点的网络**通过公用网络连接,构成**逻辑上的虚拟子网
 
+VPN构成:VPN客户机、VPN服务器、隧道、VPN连接
+
+VPN功能:数据封装、认证、数据完整性、数据加密
+
+VPN的类型:
+
+- 第二层(数据链路层)VPN技术
+  - **PPTP**:远程用户拨号连接本地ISP、通过Internet安全远程访问公司网络资源(分为主动模式、被动模式)
+  - L2F:在多种介质(AMT、帧中继、IP网)上建立多协议的安全虚拟专用网,将链路层的协议(HDLC,PPP)封装起来传送
+  - **L2TP**:在上述两种协议的基础上产生,适合组建远程接入方式的VPN
+- 第三层(网络层)VPN技术
+  - **IPSec:专为IP设计提供安全服务的一种协议**
+  - GRE:规定了如何用一种网络协议封装另一种网络协议
+  - MPLS:多协议标签交换
+
+
+
+VPN协议
+
+- 数据链路层协议
+  - 点对点隧道协议(Point-to-Point Tunneling Protocol,PPTP):微软公司设计,工作在OSI模型的**第二层**.
+    - 通过TCP控制连接、使用扩展的通用路由协议GRE(Generic Routing Encapsulation)
+  - 第二层隧道协议(Layer 2 Tunneling Protocol,L2TP):创建时必须使用与PPP连接相同的认证机制
+    - 采用UDP封装和传输PPP帧
+  - 这两个协议都与PPP相关,对PPP协议的数据包进行包装.通常用于支持拨号用户**远程接入**企业或机构内部VPN服务器
+  - 这两个协议最大优点是简单易行、最大缺点是安全强度差,无强加密和认证支持,与IPSEC结合使用
+- 网络层VPN协议
+  - IPSec协议:企业级的VPN.首先进行密钥协商(IKE协议)、然后进行网络数据包重封装(认证头(Authentication Header)AH协议和封装安全载荷(Encapsulation Security Payload)ESP协议)
+    - IP数据包完整性**仅由**检验和来保证,缺乏安全性.AH协议**使用消息认证码**(HMAC)对IP进行验证,但它不提供加密功能
+    - 隧道模式----任何场景、传输模式----PC到PC
+
+
+
+<img src="img/image-20221115204054286.png" alt="image-20221115204054286" style="zoom:45%;" />
 
 ==了解移动通信网络安全和无线局域网安全==
 
+移动通信网络
+
+- 2G:采用数字的时分多址(Time Division Multiple Access,TMDA)和码分多址(Code Division Multiple Access,CDMA).
+  - 全球移动通信系统GSM--第一个引入安全机制的通信系统
+- 3G:码分多址,难以实现用户数字签名
+- 4G:以OFDM为核心技术,采用全数字全IP. 采用长期演进(LTE)和高级长期演进安全架构 根本性优点----实现不同网络间的无缝互联
+- 5G:超高效能的无线传输技术和高密度无线网络技术.
+
+无线局域网架构:无线网卡、无线接入点AP、计算机和相关设备组成
+
+加密机制WEP-最早期的WIFI安全机制
+
+认证机制:开放系统认证(Open System Authentication,OSA)和共享密钥认证(Shared Key Authentication,SKA)
+
+### 第九章
+
+==了解软件安全概念,当前软件安全威胁主要来源==
+
+软件安全:采取工程的方法使得软件在敌对攻击情况下仍正常工作
+
+采用系统化、规范化、数量化的方法来指导构建安全的软件
+
+- 黑客通过漏洞入侵
+- 恶意软件非法修改软件行为,破坏软件功能的完整性
+- 恶意软件非法使用软件中的智力成果、知识产权,破坏软件功能的机密性
+
+==了解软件安全分析过程,微软STRIDE威胁建模方法==
+
+三个关键步骤:
+
+- 抗攻击分析
+- 不确定性分析
+- 弱点分析
+
+
+
+STRIDE通过**审查**系统设计或架构来发现或纠正设计级的安全问题.
+
+- 六种威胁:欺骗证识、篡改数据、可抵赖、信息泄漏、拒绝服务、权限提升
+- 安全属性:身份验证、完整性、不可否认、机密性、可用性、 授权
+
+威胁建模的4个方面:发现已知的对系统的威胁、将威胁以风险从高到底排序、确定减少威胁的技术、选择合适的安全防御技术
+
+==了解开发生命周期的构成方式和主要步骤==
+
+瀑布模式:可行性研究与计划、需求分析、软件设计、编程、测试、运行、维护.  顺序活动
+
+原型模式
+
+渐进模式
+
+安全软件的开发生命周期(SSDL)五部分:1⃣️安全原则、规则及规章2⃣️安全需求工程3⃣️架构和设计评审4⃣️软件安全编码5⃣️测试
+
+==掌握恶意软件的定义,病毒、蠕虫和木马区别、机理与防治技术(重点)==
+
+恶意软件:行为**损害**系统用户和系统所有者利益的软件,是**故意**在计算机系统上执行恶意任务的恶意代码的**集合**
+
+
+
+病毒&蠕虫&僵尸--可复制
+
+依赖主机程序
+
+- 后门:是在恶意攻击者选择用来远程连接系统的攻击
+- 逻辑炸弹:合法的应用程序,在一定程度下会出现恶意功能
+- 木马:它**不进行自行复制**.木马通常的意图是**在系统中提供后门**
+- 病毒:将其自身的副本**添加**到文件、文档或磁盘驱动器的启动扇区来**进行复制**. **明显的特征是自行复制**
+
+独立于主机程序
+
+- 蠕虫:在没有携带者的情况下复制,则被认为是蠕虫.**病毒寻找文件以进行感染,但蠕虫仅尝试复制其自身**
+- 僵尸(DOS)
+
+<img src="img/image-20221115214832512.png" alt="image-20221115214832512" style="zoom:45%;" />
 
 
 
 
 
+病毒定义:**人为制造的**、能进行自我复制、对计算机资源具有**破坏作用**的一组程序和指令的集合
+
+按照寄生存储位置分类
+
+- 引导型病毒:病毒占据物理位置即可获得控制权
+- 文件型病毒
+  - 感染技术:重写病毒、追加病毒、前置病毒、蛀穴病毒、压缩型病毒、变形虫感染技术、嵌入式解密程序技术、迷惑性欺骗跳转技术
+- 混合型病毒
+
+按照病毒连接方式分类:源码型病毒、嵌入型病毒、外壳病毒、译码型病毒、操作系统型病毒
+
+病毒的检测:比较法、搜索法、分析法、感染实验法、软件模拟法、广发应用的-病毒行为检测技术、启发式代码扫描分析技术、虚拟机查毒技术
+
+
+
+蠕虫:自包含的程序(或是一套程序),通过**利用**系统漏洞、**传播**自身功能的拷贝或自身的某些部分到其他计算机系统中
+
+- 利用网络进行复制和传播,途径:通过网络和电子邮件
+- 工作方式:扫描--攻击--复制
+
+根据传播、运作方式分为两类:
+
+- 主机蠕虫:所有部分均包含在所运行的计算机系统中
+- 网络蠕虫:每一部分运行在不同计算机中
+  - 熊猫烧香
+
+根据利用漏洞的不同分类
+
+- 邮件蠕虫
+- 网页蠕虫:利用IFrame漏洞和MIME漏洞
+- 系统漏洞蠕虫:具备一个小型的漏洞利用系统
+
+蠕虫的实体结构:未编译的源代码、已编译的链接模块、可运行代码、脚本、受感染系统上的可执行程序、信息数据
+
+防治方案:破坏实体结构、使其某个功能组成部分不能正常工作
+
+- 修补系统漏洞、分析蠕虫行为、防火墙、公告
+
+
+
+木马:一种基于远程控制的攻击工具,隐蔽性、非授权性,不进行自我复制
+
+采用C/S结构.三部分组成:木马配置程序、控制程序、木马程序
+
+入侵六步骤:配置木马、传播木马、运行木马、信息反馈、建立连接、远程控制
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<img src="img/image-20221115220735479.png" alt="image-20221115220735479" style="zoom:45%;" />
 
 
 
