--- a/课程/计网.md
+++ b/课程/计网.md
@@ -7,3 +7,33 @@
 第五章
 
 SDN(Software-Defined Networking) -软件定义网络
+
+第六章
+
+NIC(Network Interface Card)-网络接口卡
+
+MAC(Mutiple Access Control protocol)-多路访问控制协议
+
+链路层地址称呼：LAN地址/MAC地址/物理地址
+
+ARP(Address Resolution Protocol)-地址解析协议
+
+
+
+
+
+
+
+一、信道划分协议
+
+二、随机接入协议
+
+三、轮流协议
+
+​	轮询协议、令牌传递协议
+
+
+
+
+
+路由器隔离冲突域+广播域、交换机隔离冲突域
