--- a/课程/计网.md
+++ b/课程/计网.md
@@ -1,14 +1,36 @@
 10个选择题 10分
 
+## 第一章
+
+CDMA(Code Division Multiple Access)。码分多址
+
+10BaseT网卡采用曼彻斯特编码
+
+奈氏准则:码元传输速率上限C=2Wlog~2~N    W为带宽
+
+信噪比dB = 10log~10~(S/N)
+
+CDMA
+
+- 任何一个码片向量和该码片向量自己的规格化内积都是1
+
+## 第二章
 
 
-第四章
 
-第五章
+## 第三章
+
+
+
+## 第四章
+
+
+
+## 第五章
 
 SDN(Software-Defined Networking) -软件定义网络
 
-第六章
+## 第六章
 
 NIC(Network Interface Card)-网络接口卡
 
