--- a/课程/计网.md
+++ b/课程/计网.md
@@ -1,8 +1,14 @@
 10个选择题 10分
 
+https://www.sssam.com/9136.html
+
 ## 第一章
 
 CDMA(Code Division Multiple Access)。码分多址
+
+ISP(Internet Service Provide) 因特网服务提供商
+
+
 
 10BaseT网卡采用曼彻斯特编码
 
@@ -14,23 +20,274 @@ CDMA
 
 - 任何一个码片向量和该码片向量自己的规格化内积都是1
 
-## 第二章
+
+
+电路交换：在端系统间通信会话期间，预留了端系统间沿路径通信所需要的资源
+
+分组交换与电路交换对比
+
+- 电路交换不考虑需求，而预先分配了传输链路的使用
+  - 已分配但并不需要的链路时间未被利用
+- 分组交换按需分配链路使用。链路传输能力在所有需要在链路上传输分组的用户之间被共享
 
 
 
-## 第三章
+传输时延：将所有分组的比特推向链路所需要的时间
+
+传播时延：一个比特从一台路由器传播到另一台路由器所需要的时间
 
 
 
-## 第四章
+## 第二章 应用层
+
+SMTP(Simple Mail Transfer Protocol)
+
+POP3(Post Office Protocol-Version3)
+
+IMAP(Internet Mail Access Protocol)
 
 
 
-## 第五章
+进程间通信利用套接字Socket发送和接收消息实现
+
+- 标识符：IP地址+端口号
+
+
+
+### CS体系结构
+
+clients
+
+- 主动向远程服务器发起通信
+- 客户程序必须知道服务器程序的地址
+- 间歇性接入网络
+- 不会与其他客户机直接通信
+
+server
+
+- 一直在线，接受客户通信请求不需要知道客户程序的地址
+- 固定IP地址
+
+### P2P体系结构
+
+- 没有永远在线的服务器
+- 任意端系统直接通信
+- 对等方之间请求服务
+- 对等方间歇连接并更改IP地址
+- **自扩展性**
+
+### 文件分发
+
+- 文件被划分为等长度的块chunk
+- torrent洪流：交换同一文件的文件块的节点组
+- tracker追踪器：保存在torrent中各节点的IP地址和端口等信息
+
+F大小的文件从一台服务器分发到N个对等方、服务器带宽u~s~、u~T~是上传速率之和
+
+CS
+
+- 从服务端考虑：必须按顺序发送N个文件副本，T=NF/u~s~
+- 客户端：下载速度最慢的主机速率位d~min~，T=F/d~min~
+- T~cs~ =  max{NF/u~s~，F/d~min~}
+
+P2P
+
+- 初始服务器分发的最少时间不可能小于 F/u~s~
+- 下载文件分发的最少时间不可能小于 F/d~min~
+- 上载文件分发的最少时间不可能小于NF/u~T~
+- T~P2P~ = max{F/u~s~，F/d~min~，NF/(u~s~+u~T~)}
+
+### 应用层协议
+
+HTTP 80端口  
+
+- HTTP1.0
+  - 非持续连接HTTP：每个TCP连接最多发送**一个对象**，然后关闭连接
+    - 每个对象需要两个RTT时间
+- HTTP1.1
+  - 持续连接HTTP：单个TCP连接可以传输多个对象
+    - 非流水线方式：客户在收到前一个响应后才能发出下一个请求，比上面两个RTT时间节省了建立TCP连接所需的一个RTT时间。服务器在发送完一个对象后其TCP连接处于空闲状态
+    - 流水线方式：客户机在遇到被引用对象时立即发送请求，对于所有被引用对象，**只有一个RTT**
+- HTTP2：对象分为帧，帧交错传输
+  - 多个HTTP请求复用一个TCP连接，发生丢包时，一个TCP连接中的所有HTTP请求都必须等待这个被丢了的包重传回来
+  - HTTP1.1的管道传输会发生队首阻塞，HTTP2的丢包也会阻塞所有HTTP请求
+- HTTP3：下层的TCP协议改为了UDP
+  - 基于UDP的QUIC协议，实现类似TCP的可靠传输
+- HTTPS建立一个连接要花费6次交互(建立3次握手+TLS的3次握手)
+  - QUIC直接把3次交互合并成了3次交互
+- <img src="img/image-20221211191154168.png" alt="image-20221211191154168" style="zoom:80%;" />
+- Cookie Sessino JWT
+- Web缓存(代理服务器)：既充当客户端又充当服务器
+
+
+
+FTP
+
+
+
+SMTP/POP3/IMAP
+
+E-mail三个组成部分：
+
+- 邮件客户端
+- 邮件服务端
+- SMTP协议 端口25
+  - 基于TCP在客户机和服务器之间传递email，采用持续连接
+  - email消息只包含**7位的ASCII码**
+  - 一般不使用中间邮件传输服务器，**直接传输**
+  - 与HTTP对比
+    - HTTP-拉式(pull)，每个对象封装在独立的响应消息中    SMTP-推式(push)，多个对象由多个部分构成的消息中发送
+    - 都是基于ASCII码
+- user(A)--**SMTP**-->sender's mail server--**SMTP**-->receiver's mail server--**POP/IMAP**-->user(B)
+  - SMTP：交付/存储至接收方服务器
+  - POP(Post Office Protocol)：认证/授权和下载
+    - POP3是无状态的，下载并删除/保存模式
+  - IMAP(Internet Mail Access Protocol)：更多功能，包括对服务器存储的消息的操作
+    - 所有消息统一留在服务器上，用户利用文件夹组织消息
+  - HTTP
+
+
+
+DNS 运行在UDP之上，端口53
+
+域名解析系统(Domain Name System)-分布式数据库
+
+- 根域名服务器-顶级域名(TLD)服务器-权限域名服务器
+- 主机进行DNS查询时，查询被发送到本地域名服务器
+- 迭代查询
+  - 本地域名服务器依次访问根/顶级/权限域名服务器
+- 递归查询
+- 缓存在一段时间(TTL)后消失
+
+
+
+video streaming systems
+
+- DASH(Dynamic,Adaptive Streaming over Http)多媒体流化服务
+- 服务端：将视频文件分割成多个块，每块独立存储、告示文件(mainfest file)-提供不同块的URL
+- 客户端：先获取告示文件、周期性测量带宽、查询告示文件，一个时刻请求一个块、根据带宽请求不同码率的编码块
+
+CDNs(Content Distribution Networks)
+
+- 在CDN节点中存储内容的多个拷贝
+- 用户从CDN中请求内容、重定向到最近的拷贝
+- 内容注入->用户请求调度->内容分发->内容服务
+- 关键技术：依靠**内容ID**定位内容、负载均衡
+
+
+
+
+
+## 第三章 传输层
+
+ARQ(Automatic Repeat reQuest)  自动重传协议
+
+#### rdt 停等协议
+
+不可靠信道特性决定了可靠数据传输rdt(reliable data transfer)的复杂性
+
+- rdt_send()由上层应用调用，将数据交给rdt以发送给接收方、udt_send()由rdt调用，在不可靠的信道上发送数据给接收方
+- rdt_rcv()数据包到达接收方式调用、deliver_data()被rdt调用，向上层应用交付数据
+
+rdt1.0
+
+- 假设底层信道完全可信
+- ![image-20221213140415131](img/image-20221213140415131.png)
+
+rdt2.0--停等协议
+
+- 肯定确认ACK，否定确认NAK、当内容有误时进行重传 ARQ(差错检测、接收方反馈、重传)
+- <img src="img/image-20221213141515181.png" alt="image-20221213141515181" style="zoom:70%;" />
+- 如果ACK/NAK发生错误，发送方重新传送当前pkt（给pkt增加序号）、接收者丢弃重复的pkt
+
+rdt2.1
+
+- 处理混乱的ACK/NAK
+- 发送方FSM
+- <img src="img/image-20221213151226315.png"  style="zoom: 70%;" />
+- 接收方FSM
+- <img src="img/image-20221213151317018.png" style="zoom:70%;" />
+
+rdt2.2
+
+- 无NAK消息
+- <img src="img/image-20221213152128089.png" style="zoom:70%;" />
+
+rdt3.0
+
+- 定时器
+- 发送方FSM
+- <img src="img/image-20221213152324571.png"  style="zoom:70%;" />
+- 接收方FSM同2.2一样
+
+
+
+#### 流水线协议
+
+##### GBN
+
+- 回退N步，滑动窗口协议
+- 发送方在管道中最多有N个未确认的数据包、接收方只发送**累计确认**（接收方没有缓存）。
+  - 如果分组k已接受并交付，则所有序号**比k小的分组**也已经交付
+- **超时**的话，发送方会重传已发送但还**未被确认过的所有分组**。
+
+##### SR
+
+- 接收方单独确认所有正确收到的分组
+- 发送方只重传没收到ACK的分组(每个分组具有一个定时器)
+- 窗口长度必须小于等于序号空间大小的一半
+
+
+
+### TCP
+
+TCP(TLS提供加密)：可靠，按序交付服务、流量控制、拥塞控制
+
+- TCP在网络层IP协议提供的不可靠的服务基础上实现可靠的数据传输
+  - 流水线机制(设置窗口大小进行拥塞控制和流量控制)、累计确认、重传计时器
+- <img src="img/image-20221213162747000.png" alt="image-20221213162747000" style="zoom:50%;" />
+- 一个报文段的**序号**：该报文段首字节的字节流编号。TCP隐式地对数据流中每一个字节编号
+- **确认号**：期望收到的下一个字节的序号（**累计确认**）
+  - 该序号之前的所有字节已被正确接收
+- 三次握手
+- 
+- 四次挥手
+- 
+
+#### 快重传
+
+一旦受到3个冗余ACK，TCP就执行快速重传
+
+#### 流量控制
+
+
+
+#### 拥塞控制
+
+AIMD(Addtive Increase,Multiplicative Decrease)-加性增，乘性减
+
+- 慢启动
+
+
+
+### UDP
+
+ UDP：不可靠，无序交付服务、尽力而为、不保证延迟，带宽
+
+- <img src="img/image-20221213131113053.png" style="zoom:50%;" />
+- 
+
+
+
+## 第四章 网络层-数据平面
+
+
+
+## 第五章 网络层-控制平面
 
 SDN(Software-Defined Networking) -软件定义网络
 
-## 第六章
+## 第六章 链路层
 
 NIC(Network Interface Card)-网络接口卡
 
@@ -40,7 +297,7 @@ MAC(Mutiple Access Control protocol)-多路访问控制协议
 
 ARP(Address Resolution Protocol)-地址解析协议
 
-
+## 第七章 无线与移动网络
 
 
 
