--- a/课程/计网.md
+++ b/课程/计网.md
@@ -114,7 +114,7 @@ HTTP 80端口
 - HTTP3：下层的TCP协议改为了UDP
   - 基于UDP的QUIC协议，实现类似TCP的可靠传输
 - HTTPS建立一个连接要花费6次交互(建立3次握手+TLS的3次握手)
-  - QUIC直接把3次交互合并成了3次交互
+  - QUIC直接把6次交互合并成了3次交互
 - <img src="img/image-20221211191154168.png" alt="image-20221211191154168" style="zoom:80%;" />
 - Cookie Sessino JWT
 - Web缓存(代理服务器)：既充当客户端又充当服务器
@@ -182,6 +182,20 @@ CDNs(Content Distribution Networks)
 
 ARQ(Automatic Repeat reQuest)  自动重传协议
 
+MSS(Maximum Segment Size) 最大报文长度
+
+
+
+运输协议能够提供的服务受制于底层网络层协议的服务模型.如果网络层协议无法为主机之间发送的运输层报文提供时延或带宽保证,运输层协议也就无法为进程之间发送的应用程序报文提供时延或带宽保证
+
+运输层的接收端-多路分用、发送端-多路复用
+
+
+
+- 每个TCP报文段都有20字节的首部开销,UDP仅有8字节的开销
+
+
+
 #### rdt 停等协议
 
 不可靠信道特性决定了可靠数据传输rdt(reliable data transfer)的复杂性
@@ -213,7 +227,7 @@ rdt2.2
 - 无NAK消息
 - <img src="img/image-20221213152128089.png" style="zoom:70%;" />
 
-rdt3.0
+rdt3.0 比特交替协议
 
 - 定时器
 - 发送方FSM
@@ -233,7 +247,7 @@ rdt3.0
 
 ##### SR
 
-- 接收方单独确认所有正确收到的分组
+- 接收方**单独确认**所有正确收到的分组.失序的分组将被缓存到所有序号更小分组皆被收到为止
 - 发送方只重传没收到ACK的分组(每个分组具有一个定时器)
 - 窗口长度必须小于等于序号空间大小的一半
 
@@ -243,30 +257,60 @@ rdt3.0
 
 TCP(TLS提供加密)：可靠，按序交付服务、流量控制、拥塞控制
 
+在一个发送方中未被确认的数据量不会超过min{rwnd,cwnd}
+
+
+
 - TCP在网络层IP协议提供的不可靠的服务基础上实现可靠的数据传输
   - 流水线机制(设置窗口大小进行拥塞控制和流量控制)、累计确认、重传计时器
 - <img src="img/image-20221213162747000.png" alt="image-20221213162747000" style="zoom:50%;" />
-- 一个报文段的**序号**：该报文段首字节的字节流编号。TCP隐式地对数据流中每一个字节编号
+  - TCP套接字由一个四元组(源IP地址,源端口号,目的IP地址,目的端口号)标识:两个具有不同源IP地址或源端口号的到达TCP报文段将被重定向到两个不同的套接字
+
+- 一个报文段的**序号**(32比特)：该报文段首字节的字节流编号。TCP隐式地对数据流中每一个字节编号
 - **确认号**：期望收到的下一个字节的序号（**累计确认**）
   - 该序号之前的所有字节已被正确接收
-- 三次握手
-- 
+- 三次握手: 客户端首先发送一个特殊的TCP报文段(SYN=1)
+  - 第三步的时候连接已经建立,所以SYN比特置为0
+  - SYN洪范攻击
+
+- <img src="img/image-20221214093440329.png" style="zoom:50%;" />
 - 四次挥手
-- 
+  - 客户端服务器各自关闭自己的连接端(发送**FIN位为1**的TCP段)
+  - 用ACK回复收到的FIN(ACK可以和自己的FIN相结合)
+  - 可同时处理FIN交换  
+
+- <img src="img/image-20221214093557170.png" alt="image-20221214093557170" style="zoom:50%;" />
 
 #### 快重传
 
-一旦受到3个冗余ACK，TCP就执行快速重传
+一旦受到3个相同冗余ACK，TCP就执行快速重传
 
 #### 流量控制
 
+它是一个速度匹配服务
 
+发送方维护一个接收窗口(rwnd)长度--该接收方还有多少可用的缓存空间
 
 #### 拥塞控制
 
 AIMD(Addtive Increase,Multiplicative Decrease)-加性增，乘性减
 
-- 慢启动
+因为IP网络的拥塞而被遏制
+
+TCP报文段的丢失被认为是网络拥塞的迹象-拥塞窗口(cwnd)
+
+- 慢启动:cwnd的值以1个MSS开始并且每当传输的报文段首次确认就增加一个MSS(指数增长)
+  - 由超时引起的丢包时,发送方将cwnd设置为1,并将ssthresh设置为cwnd/2
+
+- 拥塞避免:每个RTT只将cwnd的值加一个MSS
+  - 超时引起的丢包与慢启动处理一样
+  - 收到3个冗余ACK引起的丢包时,发送方将cwnd的值变为N/2+3(计及已收到的3个冗余的ACK要加上3个MSS)
+
+
+快速恢复
+
+- TCP Tahoe无论发生什么丢包,无条件将cwnd置为1,进入慢启动状态
+- TCP Reno综合了快速恢复
 
 
 
@@ -275,17 +319,125 @@ AIMD(Addtive Increase,Multiplicative Decrease)-加性增，乘性减
  UDP：不可靠，无序交付服务、尽力而为、不保证延迟，带宽
 
 - <img src="img/image-20221213131113053.png" style="zoom:50%;" />
+  - UDP套接字由一个二元组标识(目的IP地址,目的端口号):即使源IP地址/源端口号不同,但是两个UDP报文段具有相同的目的IP地址和目的端口号,那么这两个报文段将通过相同的目的套接字定位到相同的目的进程
+
 - 
 
 
 
 ## 第四章 网络层-数据平面
 
+MTU(Maximum Transmission Unit) 最大传送单元
+
+CIDR(Classless Interdomain Routing) 无类别域间路由选择
+
+DHCP(Dynamic Host Configuration) 动态主机配置协议
+
+NAT(Network Address Translation) 网络地址转换
+
+
+
+A类 1-126 B类 128-191 C类 192-223 D类 224-248
+
+<img src="img/image-20221226133619890.png" alt="image-20221226133619890" style="zoom:33%;" />
+
+交换机:基于链路层帧中的字段值做出转发决定
+
+路由器:基于网络层数据报中的首部字段值做出转发决定
+
+当有大量TCP流(N条)流过一条链路时,缓存所需要的数量B=RTT·C(链路容量)/根号N
+
+
+
+
+
+#### IPv4格式
+
+<img src="img/image-20221226132728798.png" alt="image-20221226132728798" style="zoom:40%;" />
+
+- 数据报理论最大长度2^16^=65535字节
+- 协议为6表明数据部分交给TCP,17表明交给UDP
+- <img src="img/image-20221226133141668.png" alt="image-20221226133141668" style="zoom:33%;" />
+- <img src="img/image-20221226133725201.png" alt="image-20221226133725201" style="zoom:39%;" />
+
+### DHCP
+
+客户-服务器协议
+
+- DHCP服务器发现:客户在UDP分组中向端口67发送DHCP发现报文(广播目的地址:255.255.255.255。源IP地址0.0.0.0)
+- DHCP服务器提供:服务器向客户响应(使用IP广播地址255.255.255.255)
+- DHCP请求:客户从一个或多个服务器提供中选择一个,并发送请求报文
+- DHCP ACK
+
+
+
+建隧道:IPv6数据报放到一个IPv4数据报的数据字段中
+
 
 
 ## 第五章 网络层-控制平面
 
 SDN(Software-Defined Networking) -软件定义网络
+
+OSPF(Open Shortest Path First) 开放最短路优先
+
+RIP(Routing Information Protocol) 路由信息协议
+
+BGP(Broder Gateway Protocol) 边界网关协议
+
+
+
+传统转发仅仅基于分组的目的地址
+
+### 路由选择算法
+
+#### 集中式路由选择算法-LS
+
+完整的、全局性的网络知识计算出从源到目的地之间的最低开销路径(以所有节点之间的连通性及所有链路的开销为输入)
+
+链路状态LS(Link State)算法   Dijkstra
+
+- <img src="img/image-20221226140020128.png"  style="zoom:50%;" />
+-  
+
+#### 分散式路由选择算法-DV
+
+以迭代、分布式的方式计算出最低开销路径(没有节点拥有关于所有网络链路状态开销的完整信息) 每个节点仅有与其直接相连链路的开销知识
+
+距离向量DV(Distance Vector)算法
+
+- <img src="img/image-20221226141534802.png" style="zoom:44%;" />
+
+### OSPF
+
+不使用UDP而是直接用IP数据报传送
+
+- 采用LS算法(链路状态分组分法、每个节点上有拓扑图、Dijkstra)
+- 路由器**洪泛**OSPF链路信息到整个AS中的其他所有路由器(IP协议直接承载OSPF信息)
+  - 只有当链路状态变化时才使用洪泛法发送信息
+- IS-IS路由选择协议基本和OSPF一样
+
+### BGP
+
+eBGP(外部BGP:跨越两个AS的BGP)。iBGP(内部BGP)
+
+
+
+AS间路由选择协议BGP。AS内部路由选择协议OSPF
+
+
+
+### RIP使用UDP,OSPF使用IP,而BGP使用TCP。这样做有何优点?为什么RIP周期性地和临站交换路由信息而BGP却不这样做?
+
+RIP只和邻站交换信息,使用UDP无可靠保障,但开销小,可以满足RIP要求;
+
+OSPF使用可靠的洪泛法,直接使用IP,灵活、开销小.OSPF构成的数据报很短的好处:不必将长的数据报切片
+
+BGP需要交换整个路由表和更新信息,TCP提供可靠交付以减少带宽消耗。
+
+RIP使用不保证可靠交付的UDP,因此必须不断地(周期性地)和邻站交换信息才能使路由信息及时得到更新。但BGP使用保证可靠交付的TCP因此不需要这样做。
+
+
 
 ## 第六章 链路层
 
@@ -296,6 +448,8 @@ MAC(Mutiple Access Control protocol)-多路访问控制协议
 链路层地址称呼：LAN地址/MAC地址/物理地址
 
 ARP(Address Resolution Protocol)-地址解析协议
+
+
 
 ## 第七章 无线与移动网络
 
