--- a/课程/计网.md
+++ b/课程/计网.md
@@ -451,17 +451,66 @@ ARP(Address Resolution Protocol)-地址解析协议
 
 
 
+帧开始符SOH、帧结束符EOT
+
+### ARP
+
+将IP地址转换为链路层地址
+
+每台路由器或主机在其内存中具有一个ARP表(包含IP地址到MAC地址的映射)
+
+- 假设没有映射关系，广播MAC地址+匹配IP地址
+
+
+
+### VLAN
+
+即虚拟局域网：通过将局域网内的设备逻辑地址而不是物理地址划分成一个个网段从而实现虚拟工作组的技术
+
+基于端口的VLAN：分组交换机端口 (通过交换机管理软件)
+
+#### VLAN干线连接
+
+每台交换机上的 一个特殊端口被配置为干线端口，互联VLAN交换机。
+
+
+
+### 802.11帧
+
+地址1指的是接收端的MAC地址，地址2指的是发送端的MAC地址，地址3指的是subnet连接路由器的端口地址
+
+
+
 ## 第七章 无线与移动网络
 
 
 
+## MAC协议分类
 
+### 一、信道划分协议 多路复用
 
-一、信道划分协议
+### 二、随机接入协议 冲突恢复
 
-二、随机接入协议
+#### 时隙ALOHA
 
-三、轮流协议
+- 所有帧大小相同、每个时隙传输1个帧
+- 当有新的帧时
+  - 无冲突--该节点在下一个时隙发送新的帧
+  - 有冲突--该节点在下一个时隙以概率P重传该帧
+
+#### 纯ALOHA
+
+- 有新的帧时，立即发送
+
+#### CSMA
+
+- 发送帧前，监听信道
+- 传输检测到碰撞时，发送48bit拥挤信号
+- 返回第二步的等待时间 K*512比特时间（发送512比特进入以太网所需时间量的K倍）
+  - 二进制指数后退算法
+- 接收完拥挤信号后，检测96比特时间
+
+### 三、轮流协议
 
 ​	轮询协议、令牌传递协议
 
@@ -469,4 +518,17 @@ ARP(Address Resolution Protocol)-地址解析协议
 
 
 
+### 交换机/路由器的比较
+
 路由器隔离冲突域+广播域、交换机隔离冲突域
+
+交换机优缺点
+
+- 即插即用、具有相对高的分组功率和转发速率，交换机必须处理至第二层的帧，路由器必须处理至第三层的数据报
+- 为了防止广播帧的循环，交换网络拓扑限制为一棵生成树、交换机对广播风暴不提供任何保护措施
+
+路由器优缺点
+
+- 路由器没有生成树的限制、对第二层的广播风暴提供了防火墙保护
+- 路由器和连接到它们的主机需要人为配置IP地址、路由器对每个分组的处理时间通常更长
+
