--- a/js-higher/14_浅拷贝-深拷贝-事件总线.md
+++ b/js-higher/14_浅拷贝-深拷贝-事件总线.md
@@ -17,7 +17,7 @@ console.log(obj.friend.name)	// xcw
 
 Object.assign(target, source)
 
-* 将source中的拷贝到target 
+* 遍历源对象所有可枚举的自有键并把它们复制到目标对象，最终返回目标对象
 
 
 
