--- a/课程/计网.md
+++ b/课程/计网.md
@@ -99,7 +99,9 @@ P2P
 
 ### 应用层协议
 
-HTTP 80端口  
+#### HTTP 
+
+80端口  
 
 - HTTP1.0
   - 非持续连接HTTP：每个TCP连接最多发送**一个对象**，然后关闭连接
@@ -125,7 +127,7 @@ FTP
 
 
 
-SMTP/POP3/IMAP
+#### SMTP/POP3/IMAP
 
 E-mail三个组成部分：
 
@@ -148,7 +150,9 @@ E-mail三个组成部分：
 
 
 
-DNS 运行在UDP之上，端口53
+#### DNS
+
+运行在UDP之上，端口53
 
 域名解析系统(Domain Name System)-分布式数据库
 
