--- a/js-higher/05_对象增强.md
+++ b/js-higher/05_对象增强.md
@@ -10,12 +10,13 @@
   * 数据属性描述符
 
     * [[Configurabel]] 表示属性是否可以通过delete删除属性，是否可以修改它的特性或者将它修改为存取属性描述符
+      * **当configurable为false时，writable还是能由true改为false**
     * [[Enumerable]] 表示属性是否可以通过for或者Object.keys()返回该属性
     * [[Writable]] 表示是否可以修改属性的值
     * 当通过属性描述符定义一个属性时，这个属性的[[Configurabel]], [[Writable]], [[Enumerable]]默认为false
     
-  * 存取属性描述符
-
+* 存取属性描述符
+  
     * ```js
       let obj = {
         name: "kobe"
@@ -62,7 +63,7 @@
 
 * obj.hasOwnProperty(prop)
 
-某个属性是否在某个对象或其原型上
+某个属性是否在某个对象或其**原型**上
 
 * in/for in操作符
 
