--- a/TS/Vue/搭建服务器.md
+++ b/TS/Vue/搭建服务器.md
@@ -1,22 +1,51 @@
-连接远程服务器
-
-git bash
+项目部署
+CentOs Stream 9
+连接远程服务器. git bash:
 
 ```
-ssh root@ipaddress 
-password 
+ssh root@ipaddress
 ```
 
 
 
+在服务器中安装nginx
 安装nginx
-
 (Ubuntu)
 
 ```
 apt install nginx
 ```
 
+默认访问80端口
+CentOS Stream自带dnf
 
 
-自动监听80端口
+
+启动nginx：systemctl start nginx
+查看状态：systemctl status nginx
+系统启动nginx：systemctl enable nginx
+
+
+
+可通过ipaddress:80访问了
+
+
+
+把项目进行打包后，在vscode安装Remote-SSH插件
+在vscode上连接服务器后，把打包后的文件夹复制到root文件夹下
+
+
+
+修改权限
+方案一：sudo usermod -a -G root nginx  （把nginx添加到root组）
+方案二：etc/nginx/nginx.conf
+user nginx修改为user root
+server {
+注释掉  root /usr/share/nginx/html; 
+  location / { 添加为
+    root /root/hytrip/;
+    index index.html;
+  }
+}
+
+修改完后，打开终端重启nginx  systemctl restart nginx
