--- a/js-higher/06_原型与继承.md
+++ b/js-higher/06_原型与继承.md
@@ -146,3 +146,56 @@ p1.name
 * 在子（派生）类的构造函数中使用this或者返回默认对象之前，必须先通过super调用父类的构造函数
 
 
+
+
+
+
+
+## 补充
+
+Object.create(...)会创建一个对象并把对象的[[Prototype]]关联到指定的对象
+
+myObj.foo = 'hhh'
+如果foo不是直接存在于myObj中，[[Prototype]]链会被遍历，类似[[Get]]操作。如果原型链上找不到foo，它会被直接添加到myObj上
+如果foo存在于原型链上层，会出现以下情况
+
+- 1.如果在[[Prototype]]链上层存在名为foo的普通访问属性并且没有被标记为只读(即writable为true)，那么就会在myObj中添加一个名为foo的新属性，它是屏蔽属性。
+- 2.如果在[[Prototype]]链上层存在foo，但是它被标记为只读(writable:false)，那么无法修改已有属性或者在myObj上创建屏蔽属性。如果运行在严格模式下，代码会报错。否则，这条赋值语句会被忽略。
+- 3.如果在[[Prototype]]链上层存在foo并且它是一个setter，那就一定会调用这个setter。foo不会被添加到myObj，也不会重新定义foo这个setter。
+
+
+
+隐式屏蔽
+
+```js
+var aObj = {
+  a: 2
+}
+var myObj = Object.create(aObj)
+aObj.a // 2
+myObj.a // 2
+aObj.hasOwnProperty("a") // true
+myObj.hasOwnProperty("a") // false
+
+myObj.a++ // 发生了隐式屏蔽
+
+aObj.a // 2
+myObj.a // 3
+myObj.hasOwnProperty("a") // true
+```
+
+
+
+函数不是构造函数，当且仅当使用new时，函数调用会变成“构造函数调用”
+a并没有.constructor属性，所以它会委托[[Prototype]]链上的Foo.prototype。但是这个对象也没有(不过默认的Foo.prototype对象有这个属性)，所以它会继续委托，最终给链顶端的Object.prototype。这个对象有.constructor属性，指向内置的Object(...)函数
+function Foo() {...}
+Foo.prototype = { ... } // 创建一个新的原型对象
+
+const a = new Foo()
+a.constructor =\== Foo // false
+a.constructor =\== Object // true
+
+
+
+a instanceof Foo 在a的整条[[Prototype]]链中是否有Foo.prototype指向的对象。对象和函数之间的关系
+
