--- a/课程/软件工程.md
+++ b/课程/软件工程.md
@@ -6,13 +6,13 @@ Structured Analysis
 
 - 例题一:<img src="img/image-20221210170716468.png" style="zoom:60%;" />
 - 例题二:
-- <img src="img/image-20221210171238050.png"  style="zoom:60%;" />
+- <img src="img/image-20221210171238050.png"  style="zoom:80%;" />
 - 例题三：
-- <img src="img/image-20221227170822178.png"  style="zoom: 70%;" /><img src="img/image-20221227170850753.png" alt="image-20221227170850753" style="zoom:67%;" />
+- <img src="img/image-20221227170822178.png"  style="zoom:90%;" /><img src="img/image-20221227170850753.png" style="zoom:80%;" />
 
 实体关系图ER---信息域
 
-<img src="img/image-20221210185449716.png" alt="image-20221210185449716" style="zoom:33%;" />
+<img src="img/image-20221210185449716.png"  style="zoom: 50%;" />
 
 状态转换图STD---行为域
 
@@ -52,11 +52,11 @@ Structured Analysis
 
 ### DFD图
 
-<img src="img/image-20221227175551024.png" style="zoom:80%;"/>
+<img src="img/image-20221227175551024.png"/>
 
 ### 协作图
 
-<img src="img/image-20221227175622671.png"  style="zoom:80%;" />
+<img src="img/image-20221227175622671.png" />
 
 
 
@@ -68,11 +68,11 @@ Structured Analysis
 
 ### 状态图
 
-<img src="img/image-20221227175735948.png"  style="zoom:80%;" />
+<img src="img/image-20221227175735948.png"   />
 
 ### 顺序图
 
-<img src="img/image-20221227175747038.png" style="zoom:80%;" />
+<img src="img/image-20221227175747038.png"  />
 
 
 
