--- a/TS/Vue/搭建服务器.md
+++ b/TS/Vue/搭建服务器.md
@@ -49,3 +49,23 @@ server {
 }
 
 修改完后，打开终端重启nginx  systemctl restart nginx
+
+
+
+
+
+etc/nginx/sites/enabled
+
+```js
+	location / {
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		# try_files $uri $uri/ =404;
+		root /root/mytrip/;
+		index index.html;
+	}
+```
+
+
+
+https://blog.csdn.net/zxd1435513775/article/details/102508463
