--- a/TS/Vue/项目配置.md
+++ b/TS/Vue/项目配置.md
@@ -99,7 +99,9 @@ trim_trailing_whitespace = false
   }
 ```
 
-(3.vscode配置eslint
+(
+
+3.vscode配置eslint
 
 ```json
   "eslint.lintTask.enable": true,
@@ -237,30 +239,7 @@ export default defineConfig({
 
 
 
-npm i less -D
 
-npm i normalize.css(在main中引入)
-
-npm i element-plus 
-
-npm i unplugin-vue-components unplugin-auto-import -D (自动导入element-plus组件)
-
-npm i vite-plugin-style-import   consola  -D (ElMessage等样式)
-
-npm i @element-plus/icons-vue (注册icon图标，需要创建一个文件进行全局注册)
-
-```ts
-// global/register-icons.ts
-import * as ElementPlusIconsVue from '@element-plus/icons-vue'
-import type { App } from 'vue'
-
-function registerIcons(app: App<Element>) {
-  for (const [key, component] of Object.entries(ElementPlusIconsVue)) {
-  	app.component(key, component)
-	}
-}
-export default registerIcons
-```
 
 ##### 区分生产和开发环境
 
@@ -341,7 +320,6 @@ watch(route, (newRoute) => {
   currentIndex.value = index
 })
 </script>
-
 ```
 
 
@@ -372,15 +350,9 @@ watch(route, (newRoute) => {
 ```js
 // 需要翻墙才能使用
 navigator.geolocation.getCurrentPosition(
-  (res) => {
-    console.log('获取位置成功', res)
-  },
-  (err) => {
-    console.log('获取位置失败', err)
-  },
-  {
-    timeout: 5000
-  }
+  (res) => {},
+  (err) => {},
+  { timeout: 5000 }
 )
 ```
 
@@ -534,9 +506,112 @@ export default defineConfig({
 
 
 
+#### ref传入函数
+
+```vue
+<script setup langt="ts">
+import { ref } from 'vue'
+import type { ComponentPublicInstance, VNodeRef } from 'vue'
+
+const els = ref<any[]>([])
+const titles = ref<string[]>([])
+function getRef(el: Element | ComponentPublicInstance | null) {
+  if (!el) return
+
+  const instance = el as ComponentPublicInstance
+  els.value.push(instance.$el)
+  titles.value.push(instance.$el.title)
+}
+</script>
+
+<template>
+	<div>
+    <detail-infos title="描述" :ref="getRef" />
+    <detail-facility title="设施" :ref="getRef" />
+    <detail-landlord title="房东" :ref="getRef" />
+    <detail-comment title="评论" :ref="getRef" />
+    <detail-notice title="须知" :ref="getRef" />
+    <detail-map title="周边" :ref="getRef" />
+  </div>
+</template>
+```
+
+
+
+#### v-memo
+
+
+
+#### useScroll
+
+```typescript
+import { ref, onMounted, onUnmounted } from 'vue'
+import { throttle } from 'lodash'
+
+export default function useScroll(elRef?: any) {
+  let el: any = window
+  onMounted(() => {
+    if (elRef) el = elRef.value
+    el.addEventListener('scroll', handleScroll)
+  })
+  onUnmounted(() => {
+    el.removeEventListener('scroll', handleScroll)
+  })
+  const isReachBottom = ref(false)
+  const clientHeight = ref(0)
+  const scrollHeight = ref(0)
+  const scrollTop = ref(0)
+  const handleScroll = throttle(
+    () => {
+      if (el === window) {
+        clientHeight.value = document.documentElement.clientHeight
+        scrollTop.value = document.documentElement.scrollTop
+        scrollHeight.value = document.documentElement.scrollHeight
+      } else {
+        clientHeight.value = el.clientHeight
+        scrollHeight.value = el.scrollHeight
+        scrollTop.value = el.scrollTop
+      }
+      if (clientHeight.value + scrollTop.value >= scrollHeight.value) {
+        isReachBottom.value = true
+      }
+    },
+    300,
+    { trailing: true }
+  )
+  return { isReachBottom, clientHeight, scrollHeight, scrollTop }
+}
+```
+
 
 
 ### cms项目
 
+npm i element-plus 
+
+npm i unplugin-vue-components unplugin-auto-import -D (自动导入element-plus组件)
+
+npm i vite-plugin-style-import   consola  -D (ElMessage等样式)
+
+npm i @element-plus/icons-vue (注册icon图标，需要创建一个文件进行全局注册)
+
+```ts
+// global/register-icons.ts
+import * as ElementPlusIconsVue from '@element-plus/icons-vue'
+import type { App } from 'vue'
+
+function registerIcons(app: App<Element>) {
+  for (const [key, component] of Object.entries(ElementPlusIconsVue)) {
+  	app.component(key, component)
+	}
+}
+export default registerIcons
+```
 
 
+
+
+
+#### 动态加载路由
+
+https://vitejs.cn/vite3-cn/guide/features.html#glob-import
