--- a/js/03_内存管理和闭包.md
+++ b/js/03_内存管理和闭包.md
@@ -34,3 +34,12 @@ MDN对JavaScript闭包的解释
 * 在 JavaScript 中，每当创建一个函数，闭包就会在函数创建的同时被创建出来
 
 
+
+从广义的角度来说：JavaScript中的函数都是闭包；
+
+从狭义的角度来说：JavaScript中一个函数，如果访问了外层作用域的变量，那么它是一个闭包；
+
+### 内存泄露
+
+闭包会造成内存泄露，其实就是引用链中的所有对象都是无法释放的
+
