--- a/js/04_函数增强.md
+++ b/js/04_函数增强.md
@@ -27,6 +27,7 @@
 * 在相同的输入值时，产生相同的输出
 * 输出和输入值与其他的隐藏信息或状态无关
 * 不能有语义上可观察的函数副作用，诸如“触发事件”，使输出设备输出，或更改输出值以外物件的内容等
+  * **副作用**表示在执行一个函数时，除了返回函数值之外，还对调用函数产生了附加的影响，比如修改了全局变量，修改参数或者改变外部的存储
 
 
 
@@ -105,6 +106,13 @@ console.log(newFn(100))
 
 
 
+### with和eval
+
+- **with语句** 扩展一个语句的作用域链。
+- eval是一个特殊的函数，它可以将传入的字符串当做js代码来运行；会将最后一句执行语句的结果，作为返回值； 
+
+
+
 ### 严格模式
 
 限制
@@ -113,7 +121,8 @@ console.log(newFn(100))
 * 会引起静默失败(silently fall,不报错也没有任何效果)的赋值操作抛出异常
 * 试图删除不可删除的属性
 * 不允许函数参数有相同的名称
-
+*  在严格模式下，不允许使用with
+* 在严格模式下，eval不再为上层引用变量
 * this绑定不会默认转成对象    ( foo.apply(123)   )
 
 
