--- a/js/06_原型与继承.md
+++ b/js/06_原型与继承.md
@@ -52,13 +52,24 @@ Object.prototype.\_\_proto\_\_ 为 null
 * 1.定义父类构造函数
 * 2.父类原型上添加内容
 * 3.定义子类构造函数
-* 4.创建父类对象，并作为子类的原型对象，在子类原型对象上添加内容
+* 4.创建父类对象，并作为子类的原型对象
+* 5.在子类原型对象上添加内容
+
+<img src="img/image-20230305160837473.png"  style="zoom: 50%;" />
+
+弊端
+
+- 直接打印对象是看不到这个属性的
+- 这个属性会被多个对象共享，如果这个对象是一个引用类型，那么就会造成问题
+- 不能给Person传递参数（让每个stu有自己的属性），因为这个对象是一次性创建的（没办法定制化）
+
+
 
 ### 借用构造函数--属性的继承
 
 * 在子类构造函数的内部用apply()/call()调用父类构造函数
 
-### 组合借用继承的问题
+组合借用继承的问题
 
 * 会调用两次父类构造函数
 * 所有的子类实例对象会拥有两份父类的属性
