--- a/Vue/理解.md
+++ b/Vue/理解.md
@@ -79,3 +79,20 @@ key的作用：主要用在Vue的虚拟DOM算法，在新旧nodes对比时辨识
 * 4.通过callWithErrorHandling 的函数执行 setup
   * 组件的instance肯定是在执行 setup 函数之前就创建出来的
 
+
+
+### userRouter
+
+使用 `useRouter` 函数来获取当前应用程序的路由实例。这是因为在 Vue.js 3.x 中，路由实例被视为一个与组件分离的「全局」对象
+尽管可以直接在组件中使用路由实例，但这违背了 Vue.js 的「组件化」设计理念，因此在实际开发中应该尽量避免这种用法
+
+
+
+### ref<InstanceType\<typeof cpn>>
+
+把cpn当作是一个类
+const cRef = ref<InstanceType\<typeof cpn>>()
+ref实际得到的值是由cpn创建出来的实例
+而cpn是一个值，不能直接传入cpn作为类型
+也不能只传入typoef cpn。因为typeof cpn 得到的是cpn的具体类型
+而InstanceType\<typeof cpn>后，得到的是由cpn的类型创建出来的实例对象
